--- a/nginx/index.html
+++ b/nginx/index.html
@@ -27,10 +27,11 @@
   </style>
 </head>
 <body>
-  <h1>Dust Collection Services</h1>
-  <a href="/homeassistant/">Home Assistant</a>
-  <a href="/nodered/">Node-RED</a>
-  <a href="/esphome/">ESPHome</a>
-  <a href="/mqttx/">MQTTX Web Client</a>
+  <h1>My Smart Home Dashboard</h1>
+  <a href="http://homeassistant:8123" target="_blank">Home Assistant</a>
+  <a href="http://nodered:1880" target="_blank">Node-RED</a>
+  <a href="http://esphome:6052" target="_blank">ESPHome</a>
+  <a href="http://mqttx:8083" target="_blank">MQTTX Web</a>
+  <a href="http://nginx:9000" target="_blank">Portainer</a>
 </body>
 </html>
