Changed mqtt web client

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -40,7 +40,7 @@
       { name: 'Home Assistant', port: 8123 },
       { name: 'Node-RED', port: 1880 },
       { name: 'ESPHome', port: 6052 },
-      { name: 'MQTTX Web', port: 8083 },
+      { name: 'MQTT Explorer Web', port: 8083 },
 	  { name: 'Portainer', port: 9000 },
     ];
 
