--- a/nginx/index.html
+++ b/nginx/index.html
@@ -27,8 +27,8 @@
   </style>
 </head>
 <body>
-  <h1>My Smart Home Dashboard</h1>
-
+  <h1>Dust Collector Dashboard</h1>
+  <div>This page is mostly a placeholder for good things to come, but for development, here are links to the stacks containers</div>
   <div id="links"></div>
 
   <script>
