HTML cleanup, remove dc.config, updated flows

--- a/nginx/json-editor/index.html
+++ b/nginx/json-editor/index.html
@@ -20,8 +20,10 @@
       <div class="draggable tool" data-type="tool">Tool</div>
 
       <div id="controls">
+		<label for="importFile">Import Diagram:</label></br>
         <input type="file" id="importFile" style="display:block; margin:10px auto;">
-        <button id="exportBtn">Export JSON</button>
+		<span>Export Diagram</br>
+        <button id="exportBtn">Download Diagram</button></span>
       </div>
 
     </div>
