Remove HA from index.html

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -37,7 +37,7 @@
     const protocol = window.location.protocol;
 
     const services = [
-      { name: 'Home Assistant', port: 8123, path: ""  },
+      //{ name: 'Home Assistant', port: 8123, path: ""  },
       { name: 'Node-RED', port: 1880, path: ""  },
       { name: 'ESPHome', port: 6052, path: ""  },
       { name: 'MQTT Explorer Web', port: 8083, path: ""  },
