web page clean-up

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -12,6 +12,9 @@
       margin-top: 10%;
     }
     h1 { color: #38bdf8; }
+	a {
+	  color: #f8fafc;
+	}
     #links a {
       display: inline-block;
       background-color: #1e293b;
@@ -29,13 +32,13 @@
 <body>
   <h1>Dust Collector Dashboard</h1>
   <div>Use the following links to view the application dashboards:
-	  <ul>
-		  <li>NodeRed - Used to manage flows and messages to and from MQTT.</li>
-		  <li>ESPHome - Used to manage devices and firmware code on each device.</li>
-		  <li>MQTT Explorer - Used to view messages being sent to the MQTT broker (mosquitto).</li>
-		  <li>DC Configuration - Page with drag/drop functions to organize and configure your dust collection system.</li>
-		  <li>Portainer - Used to manage manage docker container, not installed by default, see <a href="https://docs.portainer.io/start/install-ce" target="_blank">here</a>.</li>
-	  </ul>
+	  
+		  <p>NodeRed - Used to manage flows and messages to and from MQTT.</p>
+		  <p>ESPHome - Used to manage devices and firmware code on each device.</p>
+		  <p>MQTT Explorer - Used to view messages being sent to the MQTT broker (mosquitto).</p>
+		  <p>DC Configuration - Page with drag/drop functions to organize and configure your dust collection system.</p>
+		  <p>Portainer - Used to manage manage docker container, not installed by default, see <a href="https://docs.portainer.io/start/install-ce" target="_blank">here</a>.</p>
+	  
   </div>
   <div id="links"></div>
 
