added project link and licensing to index.html

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -38,10 +38,19 @@
 		  <p>MQTT Explorer - Used to view messages being sent to the MQTT broker (mosquitto).</p>
 		  <p>DC Configuration - Page with drag/drop functions to organize and configure your dust collection system.</p>
 		  <p>Portainer - Used to manage manage docker container, not installed by default, see <a href="https://docs.portainer.io/start/install-ce" target="_blank">here</a>.</p>
+		 
 	  
   </div>
   <div id="links"></div>
-
+  <div>&nbsp;</div>
+  <div id="project_info">
+	<p>Github Project - Docker Dust Collection, see <a href="https://github.com/buzzkc/docker-dust-collection" target="_blank">here</a>.</p>
+	<p>Buzz KC</p>
+	<p>This software is licensed under the [Apache License 2.0](LICENSE).<p>
+	<p>It is provided free for personal and educational use.</br>  
+	Use this software at your own risk. The author is **not responsible** for any damage, loss, or injury resulting from its use.</p>
+	<p>Commercial use is allowed under the terms of the Apache 2.0 License.</p>
+  </div>
   <script>
     // Dynamically generate links based on current host
     const host = window.location.hostname;
